--- a/index.html
+++ b/index.html
@@ -1,34 +1,22 @@
 ---
 layout: bootcamp
 root: .
-venue: Euphoric State University
-address: 123 College Street, Euphoria
+venue: Duke University
+address: CRTP Classroom, 2nd Floor, Hock Plaza, 2424 Erwin Road
 country: United-States
-humandate: Feb 17-18, 2020
-humantime: 9:00 am - 4:30 pm
-startdate: 2020-06-17
-enddate: 2020-06-18
-latlng: 41.7901128,-87.6007318
+humandate: Jun 16-17, 2014
+humantime: 9:00 am - 5:00 pm
+startdate: 2014-06-16
+enddate: 2014-06-17
+latlng: 36.009706, -78.941628
 registration: restricted
-instructor: ["Grace Hopper", "Alan Turing"]
+instructor: ["Cliburn Chan", "Karen Cranston", "Joshua Granke"]
 contact: admin@software-carpentry.org
 ---
 <!--
     Edit the values in the parameter block above to be appropriate for your bootcamp.
     Please use three-letter month names for the 'humandate' field.
 -->
-
-<!-- Remove the block below. -->
-<div align="center">
-  <p><strong><em>
-      This page is a template for bootcamp home pages.
-      <br/>
-      Please see
-      <a href="https://github.com/swcarpentry/bc">https://github.com/swcarpentry/bc</a>
-      for instructions on how to create
-      a repository for your bootcamp.
-  </em></strong></p>
-</div>
 
 <!--
     This block includes the Eventbrite registration widget if 'eventbrite' has been set in the header.
