--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@ venue: Duke University
 address: CRTP Classroom, 2nd Floor, Hock Plaza, 2424 Erwin Road
 country: United-States
 humandate: Jun 16-17, 2014
-humantime: 9:00 am - 5:00 pm
+humantime: 8:30 am - 5:00 pm
 startdate: 2014-06-16
 enddate: 2014-06-17
 latlng: 36.009706, -78.941628
 registration: restricted
 instructor: ["Cliburn Chan", "Karen Cranston", "Joshua Granke"]
-contact: admin@software-carpentry.org
+contact: cliburn.chan@duke.edu
 ---
 <!--
     Edit the values in the parameter block above to be appropriate for your bootcamp.
@@ -101,19 +101,22 @@ contact: admin@software-carpentry.org
 <h2>Schedule</h2>
 
 <table class="table table-striped">
-  <tr> <td>Monday</td>  <td>09:00</td>  <td>Introduction to task automation with the Unix shell</td> </tr>
-  <tr> <td></td>        <td></td>       <td>Coffee will be served at 10:30.</td> </tr>
+  <tr> <td>Monday</td>  <td>08:30</td>  <td>Introduction to task automation and reproducible analysis</td> </tr>
+  <tr> <td></td>        <td>10:00</td>  <td>Coffee break</td> </tr>
+  <tr> <td></td>        <td>10:30</td>  <td>Working with the Unix Shell</td> </tr>
   <tr> <td></td>        <td>12:00</td>  <td>Lunch break</td> </tr>
-  <tr> <td></td>        <td>13:00</td>  <td>Building programs with Python</td> </tr>
-  <tr> <td></td>        <td></td>       <td>Coffee will be served at 14:30.</td> </tr>
-  <tr> <td></td>        <td>16:00</td>  <td>Wrap-up</td> </tr>
-  <tr> <td>Tuesday</td> <td>09:00</td>  <td>Version control with Git</td> </tr>
-  <tr> <td></td>        <td></td>       <td>Coffee will be served at 10:30.</td> </tr>
+  <tr> <td></td>        <td>13:00</td>  <td>Version control with Git</td> </tr>
+  <tr> <td></td>        <td>14:30</td>  <td>Coffee break</td> </tr>
+  <tr> <td></td>        <td>15:00</td>  <td>Interactive Python</td> </tr>
+  <tr> <td></td>        <td>16:30</td>  <td>Wrap-up</td> </tr>
+  <tr> <td>Tuesday</td> <td>08:30</td>  <td>Scriptting in Python</td> </tr>
+  <tr> <td></td>        <td>10:00</td>  <td>Coffee break</td> </tr>
+  <tr> <td></td>        <td>10:30</td>  <td>Using Python modules</td> </tr>
   <tr> <td></td>        <td>12:00</td>  <td>Lunch break</td> </tr>
   <tr> <td></td>        <td>13:00</td>  <td>Managing data with SQL</td> </tr>
-  <tr> <td></td>        <td></td>       <td>Coffee will be served at 14:30.</td> </tr>
+  <tr> <td></td>        <td>14:30</td>  <td>Coffee break</td> </tr>
   <tr> <td></td>        <td>15:00</td>  <td>Putting it all together</td> </tr>
-  <tr> <td></td>        <td>16:00</td>  <td>Wrap-up</td> </tr>
+  <tr> <td></td>        <td>16:30</td>  <td>Wrap-up</td> </tr>
 </table>
 
 <hr/>
