Fix typo in Josh's name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ startdate: 2014-06-16
 enddate: 2014-06-17
 latlng: 36.009706, -78.941628
 registration: restricted
-instructor: ["Cliburn Chan", "Karen Cranston", "Joshua Granke"]
+instructor: ["Cliburn Chan", "Karen Cranston", "Joshua Granek"]
 contact: cliburn.chan@duke.edu
 ---
 <!--
