Revised schedule and software installation to remove reference to VM

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ venue: Duke University
 address: CRTP Classroom, 2nd Floor, Hock Plaza, 2424 Erwin Road
 country: United-States
 humandate: Jun 16-17, 2014
-humantime: 8:30 am - 5:00 pm
+humantime: 9:00 am - 4:30 pm
 startdate: 2014-06-16
 enddate: 2014-06-17
 latlng: 36.009706, -78.941628
@@ -101,22 +101,22 @@ contact: cliburn.chan@duke.edu
 <h2>Schedule</h2>
 
 <table class="table table-striped">
-  <tr> <td>Monday</td>  <td>08:30</td>  <td>Introduction to task automation and reproducible analysis</td> </tr>
+  <tr> <td>Monday</td>  <td>08:30</td>  <td>Software installation help</td> </tr>
+  <tr> <td></td>        <td>09:00</td>  <td>Using a text editor</td> </tr>
   <tr> <td></td>        <td>10:00</td>  <td>Coffee break</td> </tr>
   <tr> <td></td>        <td>10:30</td>  <td>Working with the Unix Shell</td> </tr>
   <tr> <td></td>        <td>12:00</td>  <td>Lunch break</td> </tr>
   <tr> <td></td>        <td>13:00</td>  <td>Version control with Git</td> </tr>
   <tr> <td></td>        <td>14:30</td>  <td>Coffee break</td> </tr>
-  <tr> <td></td>        <td>15:00</td>  <td>Interactive Python</td> </tr>
-  <tr> <td></td>        <td>16:30</td>  <td>Wrap-up</td> </tr>
-  <tr> <td>Tuesday</td> <td>08:30</td>  <td>Scriptting in Python</td> </tr>
+  <tr> <td></td>        <td>15:00</td>  <td>Introduction to Python</td> </tr>
+  <tr> <td>Tuesday</td> <td>09:00</td>  <td>Writing Python functions</td> </tr>
   <tr> <td></td>        <td>10:00</td>  <td>Coffee break</td> </tr>
-  <tr> <td></td>        <td>10:30</td>  <td>Using Python modules</td> </tr>
+  <tr> <td></td>        <td>10:30</td>  <td>I/O and Python modules</td> </tr>
   <tr> <td></td>        <td>12:00</td>  <td>Lunch break</td> </tr>
   <tr> <td></td>        <td>13:00</td>  <td>Managing data with SQL</td> </tr>
   <tr> <td></td>        <td>14:30</td>  <td>Coffee break</td> </tr>
   <tr> <td></td>        <td>15:00</td>  <td>Putting it all together</td> </tr>
-  <tr> <td></td>        <td>16:30</td>  <td>Wrap-up</td> </tr>
+  <tr> <td></td>        <td>16:00</td>  <td>Wrap-up</td> </tr>
 </table>
 
 <hr/>
