Added link in index.html  Git lesson material

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ contact: cliburn.chan@duke.edu
   <tr> <td></td>        <td>10:00</td>  <td>Coffee break</td> </tr>
   <tr> <td></td>        <td>10:30</td>  <td>Working with the Unix Shell</td> </tr>
   <tr> <td></td>        <td>12:00</td>  <td>Lunch break</td> </tr>
-  <tr> <td></td>        <td>13:00</td>  <td>Version control with Git</td> </tr>
+  <tr> <td></td>        <td>13:00</td>  <td><a href="novice/git/" >Version control with Git</a></td> </tr>
   <tr> <td></td>        <td>14:30</td>  <td>Coffee break</td> </tr>
   <tr> <td></td>        <td>15:00</td>  <td>Introduction to Python</td> </tr>
   <tr> <td>Tuesday</td> <td>09:00</td>  <td>Writing Python functions</td> </tr>
