Add link to Etherpad

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@ contact: cliburn.chan@duke.edu
 -->
 <h2>Schedule</h2>
 
+We willl be using <a href="https://etherpad.mozilla.org/duke-2014-06">Etherpad</a> to receive real-time comments.
+
 <table class="table table-striped">
   <tr> <td>Monday</td>  <td>08:30</td>  <td>Software installation help</td> </tr>
   <tr> <td></td>        <td>09:00</td>  <td>Using a text editor</td> </tr>
