Add location for video recordings

--- a/index.html
+++ b/index.html
@@ -125,6 +125,25 @@ We willl be using <a href="https://etherpad.mozilla.org/duke-2014-06">Etherpad</
 
 <hr/>
 
+<h2>Videos</h2>
+<p>
+Here are the Panopto recording links for all four sessions:
+<ul>
+<li> <a href="http://crtp.capture.duke.edu/Panopto/=
+Pages/Viewer.aspx?id=3D4b7d1ed1-e84c-4060-96eb-140a53cb6741">June 16th, Monday AM</a>
+</li>
+<li> <a href="http://crtp.capture.duke.edu/Panopto/=
+Pages/Viewer.aspx?id=3D7e9d1b96-0eba-49c5-8d1a-53f072680eb2">June 16th, Monday PM</a>
+</li>
+<li> <a href="http://crtp.capture.duke.edu/Panopto=
+/Pages/Viewer.aspx?id=3D8b5e056d-8bef-44b8-8bda-a7af54f3c4fb">June 17th, Tuesday AM</a>
+</li>
+<li> <a href="http://crtp.capture.duke.edu/Panopto=
+/Pages/Viewer.aspx?id=3D7a3d7be9-8085-4420-b8e6-224409680974">June 17th, Tuesday PM</a>
+</li>
+</ul?
+<p>
+
 <!--
     Edit the setup instructions in _includes/setup.html to reflect your bootcamp.
     (In particular, most bootcamps teach either Python or R, not both.)
